Добавляет падинги и маржины

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
       </section>
      
-      <section class="section">
+      <section class="section work-section">
         <div class="container">
           <h2 class="section-title work">Чем мы занимаемся</h2>
 
@@ -255,40 +255,42 @@
       </section>
 
       <section class="section">
-        <h2 class="section-title">Постоянные клиенты</h2>
+        <div class="container">
+          <h2 class="section-title customer">Постоянные клиенты</h2>
 
-        <ul class="customer-list">
-          <li>
-            <a href="#">
-              <img src="./images/logo 1.svg" alt="YA & CO" width="44" height="47"/>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="./images/logo 2.svg" alt="#" width="40" height="52"/>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="./images/logo 3.svg" alt="#" width="41" height="41"/>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="./images/logo 4.svg" alt="#" width="82" height="40"/>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="./images/logo 5.svg" alt="#" width="59" height="47"/>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="./images/logo 6.svg" alt="#" width="88" height="44"/>
-            </a>
-          </li>
-        </ul>
+          <ul class="customer-list">
+            <li>
+              <a href="#">
+                <img src="./images/logo 1.svg" alt="YA & CO" width="44" height="47"/>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/logo 2.svg" alt="#" width="40" height="52"/>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/logo 3.svg" alt="#" width="41" height="41"/>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/logo 4.svg" alt="#" width="82" height="40"/>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/logo 5.svg" alt="#" width="59" height="47"/>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/logo 6.svg" alt="#" width="88" height="44"/>
+              </a>
+            </li>
+          </ul>
+       </div>
       </section>
     </main>
 
