--- a/index.html
+++ b/index.html
@@ -9,31 +9,39 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <header class="page-header">
-      <div class="container">
+    <header>
+      <div class="container page-header">
         <nav>
-          <a href="./index.html" class="logo">
-            <img src="./images/Web Studio.svg" alt="Логотип компании" width="153" height="31"/>
-          </a>
-
-          <ul class="site-nav">
-            <li><a href="./index.html" class="link current">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="#" class="link">Контакты</a></li>
-          </ul>
+          <div class="main-nav">
+            <div class="logo">
+              <a href="./index.html">
+                <img src="./images/Web Studio.svg" alt="Логотип компании" width="153" height="31"/>
+              </a>
+            </div>
+            <!-- <div class="site-nav"> -->
+              <ul class="site-nav">
+                <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+                <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li class="item"><a href="#" class="link">Контакты</a></li>
+              </ul>
+            <!-- </div> -->
+          </div>
         </nav>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contacts-link">
-              info@devstudio.com<img src="./images/mail.svg" alt="Иконка почты"/>
-            </a>
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="contacts-link">
-              +38 096 111 11 11<img src="./images/phone.svg" alt="Иконка телефона"/>
-            </a>
-          </li>
-        </ul>
+        
+        <!-- <div class="contacts"> -->
+          <ul class="contacts">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="contacts-link">
+                info@devstudio.com<img src="./images/mail.svg" alt="Иконка почты"/>
+              </a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="contacts-link">
+                +38 096 111 11 11<img src="./images/phone.svg" alt="Иконка телефона"/>
+              </a>
+            </li>
+          </ul>
+        <!-- </div> -->
       </div>
     </header>
 
