--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
           </a>
 
           <ul class="site-nav">
-            <li><a href="./index.html" class="link">Студия</a></li>
-            <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-            <li><a href="#" class="link">Контакты</a></li>
+            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li class="item"><a href="#" class="link">Контакты</a></li>
           </ul>
         </nav>
 
