--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h2 class="section-title">Наши преимущества</h2>
 
           <ul class="feature-list">
-            <li>
+            <li class="item">
               <img src="./images/antenna 1.svg" alt="Локатор">
               <h3 class="title">Внимание к деталям</h3>
               <p class="subtitle">
@@ -70,7 +70,7 @@
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/clock 1.svg" alt="Часы">
               <h3 class="title">Пунктуальность</h3>
               <p class="subtitle">
@@ -78,7 +78,7 @@
                 влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/diagram 1.svg" alt="Диаграма">
               <h3 class="title">Планирование</h3>
               <p class="subtitle">
@@ -86,7 +86,7 @@
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/astronaut 1.svg" alt="Астронавт">
               <h3 class="title">Современные технологии</h3>
               <p class="subtitle">
@@ -103,21 +103,21 @@
           <h2 class="section-title work">Чем мы занимаемся</h2>
 
           <ul class="work-list">
-            <li>
+            <li class="item">
               <a href="#">
                 <img src="./images/notebook.jpg" alt="Включенный ноутбук" width="380" height="294"/>
               </a>
 
               <h3 class="title">Десктопные приложения</h3>
             </li>
-            <li>
+            <li class="item">
               <a href="#">
                 <img src="./images/smartphone.jpg" alt="Смартфон" width="380" height="294"/>
               </a>
 
               <h3 class="title">Мобильные приложения</h3>
             </li>
-            <li>
+            <li class="item">
               <a href="#">
                 <img src="./images/desktop.jpg" alt="Десктоп" width="380" height="294"/>
               </a>
@@ -134,7 +134,7 @@
           <h2 class="section-title">Наша команда</h2>
 
           <ul class="team-list">
-            <li>
+            <li class="item">
               <a href="#">
                 <img src="./images/John.png" alt="Фото Джона" width="278" height="260"/>
               </a>
@@ -142,30 +142,30 @@
               <h3 class="title">John Smith</h3>
               <p class="subtitle">Product Designer</p>
 
-              <ul>
-                <li>
+              <ul class="social-list">
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на Instagram">
                     <img src="./images/insta1.svg" alt="Инстаграмм">
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на Twitter">
                     <img src="./images/twitter1.svg" alt="Твиттер">
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на Facebook">
                     <img src="./images/facebook1.svg" alt="Фейсбук">
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на LinkedIn">
                     <img src="./images/linkedin1.svg" alt="Линкедин">
                   </a>
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="item">
               <a href="#">
                 <img src="./images/Marta Stewart.png" alt="Фото Марты" width="278" height="260"/>
               </a>
@@ -173,30 +173,30 @@
               <h3 class="title">Marta Stewart</h3>
               <p class="subtitle">Frontend Developer</p>
 
-              <ul>
-                <li>
+              <ul class="social-list">
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на Instagram">
                     <img src="./images/insta1.svg" alt="Инстаграмм">
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на Twitter">
                     <img src="./images/twitter1.svg" alt="Твиттер">
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на Facebook">
                     <img src="./images/facebook1.svg" alt="Фейсбук">
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на LinkedIn">
                     <img src="./images/linkedin1.svg" alt="Линкедин">
                   </a>
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="item">
               <a href="#">
                 <img src="./images/Robert Jakis.png" alt="Фото Роберта" width="278" height="260"/>
               </a>
@@ -204,30 +204,30 @@
               <h3 class="title">Robert Jakis</h3>
               <p class="subtitle">Marketing</p>
 
-              <ul>
-                <li>
+              <ul class="social-list">
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на Instagram">
                     <img src="./images/insta1.svg" alt="Инстаграмм">
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на Twitter">
                     <img src="./images/twitter1.svg" alt="Твиттер">
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на Facebook">
                     <img src="./images/facebook1.svg" alt="Фейсбук">
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на LinkedIn">
                     <img src="./images/linkedin1.svg" alt="Линкедин">
                   </a>
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="item">
               <a href="#">
                 <img src="./images/Martin Doe.png" alt="Фото Мартина" width="278" height="260"/>
               </a>
@@ -235,23 +235,23 @@
               <h3 class="title">Martin Doe</h3>
               <p class="subtitle">UI Designer</p>
 
-              <ul>
-                <li>
+              <ul class="social-list">
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на Instagram">
                     <img src="./images/insta1.svg" alt="Инстаграмм">
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на Twitter">
                     <img src="./images/twitter1.svg" alt="Твиттер">
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на Facebook">
                     <img src="./images/facebook1.svg" alt="Фейсбук">
                   </a>
                 </li>
-                <li>
+                <li class="social-item">
                   <a href="#" aria-label="Ссылка на LinkedIn">
                     <img src="./images/linkedin1.svg" alt="Линкедин">
                   </a>
@@ -267,34 +267,34 @@
           <h2 class="section-title customer">Постоянные клиенты</h2>
 
           <ul class="customer-list">
-            <li>
+            <li class="item">
               <a href="#">
-                <img src="./images/logo 1.svg" alt="YA & CO" width="44" height="47"/>
+                <img src="./images/logo 1.svg" alt="YA & CO" width="44" height="47"/ class="item">
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="#">
-                <img src="./images/logo 2.svg" alt="#" width="40" height="52"/>
+                <img src="./images/logo 2.svg" alt="#" width="40" height="52"/ class="item">
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="#">
-                <img src="./images/logo 3.svg" alt="#" width="41" height="41"/>
+                <img src="./images/logo 3.svg" alt="#" width="41" height="41"/ class="item">
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="#">
-                <img src="./images/logo 4.svg" alt="#" width="82" height="40"/>
+                <img src="./images/logo 4.svg" alt="#" width="82" height="40"/ class="item">
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="#">
-                <img src="./images/logo 5.svg" alt="#" width="59" height="47"/>
+                <img src="./images/logo 5.svg" alt="#" width="59" height="47"/ class="item">
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="#">
-                <img src="./images/logo 6.svg" alt="#" width="88" height="44"/>
+                <img src="./images/logo 6.svg" alt="#" width="88" height="44"/  class="item">
               </a>
             </li>
           </ul>
@@ -303,51 +303,54 @@
     </main>
 
     <footer class="footer">
-      <div>
-        <a href="#">
-          <img src="./images/Web Studio2.svg" alt="Логотип компании" width="153" height="31"/>
-        </a>
+      <div class="container">
+        <div class="address-list">
+          <a href="#">
+            <img src="./images/Web Studio2.svg" alt="Логотип компании" width="153" height="31"/>
+          </a>
 
-        <address>
-          <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
-          <a href="mailto:info@example.com" class="footer-link">info@example.com</a>
-          <a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a>
-        </address>
+          <address>
+            <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@example.com" class="footer-link">info@example.com</a>
+            <a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a>
+          </address>
+        </div>
+
+        <div class="socials"></div>
+          <b class="footer-title">присоединяйтесь</b>
+
+          <ul class="socials">
+            <li class="item">
+              <a href="#" aria-label="Ссылка на Instagram">
+                <img src="./images/insta2.svg" alt="Инстаграмм">
+              </a>
+            </li>
+            <li class="item">
+              <a href="#" aria-label="Ссылка на Twitter">
+                <img src="./images/twitter2.svg" alt="Твиттер">
+              </a>
+            </li>
+            <li class="item">
+              <a href="#" aria-label="Ссылка на Facebook">
+                <img src="./images/facebook2.svg" alt="Фейсбук">
+              </a>
+            </li>
+            <li class="item">
+              <a href="#" aria-label="Ссылка на LinkedIn">
+                <img src="./images/linkedin2.svg" alt="Линкедин">
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="subs-item">
+          <b class="footer-title">подписаться на рассылку</b>
+          <a href="#" class="button"> Подписаться</a>
+        </div>
+      
+
+        <p class="copy">2020 | Developed by GoIT Students</p>
       </div>
-
-      <div>
-        <b class="footer-title">присоединяйтесь</b>
-
-        <ul class="socials">
-          <li>
-            <a href="#" aria-label="Ссылка на Instagram">
-              <img src="./images/insta2.svg" alt="Инстаграмм">
-            </a>
-          </li>
-          <li>
-            <a href="#" aria-label="Ссылка на Twitter">
-              <img src="./images/twitter2.svg" alt="Твиттер">
-            </a>
-          </li>
-          <li>
-            <a href="#" aria-label="Ссылка на Facebook">
-              <img src="./images/facebook2.svg" alt="Фейсбук">
-            </a>
-          </li>
-          <li>
-            <a href="#" aria-label="Ссылка на LinkedIn">
-              <img src="./images/linkedin2.svg" alt="Линкедин">
-            </a>
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <b class="footer-title">подписаться на рассылку</b>
-        <a href="#" class="button"> Подписаться</a>
-      </div>
-
-      <p class="copy">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
