--- a/portfolio.html
+++ b/portfolio.html
@@ -11,24 +11,18 @@
   <body>
     <header class="page-header">
       <div class="container page-header">
-        <nav>
-          <div class="main-nav">
-            <div class="logo">
-              <a href="./index.html">
+        <nav class="main-nav">
+              <a href="./index.html" class="logo">
                 <img src="./images/Web Studio.svg" alt="Логотип компании" width="153" height="31"/>
               </a>
-            </div>
-            <!-- <div class="site-nav"> -->
+
               <ul class="site-nav">
                 <li class="item"><a href="./index.html" class="link">Студия</a></li>
                 <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
                 <li class="item"><a href="#" class="link">Контакты</a></li>
               </ul>
-            <!-- </div> -->
-          </div>
         </nav>
         
-        <!-- <div class="contacts"> -->
           <ul class="contacts">
             <li class="item">
               <a href="mailto:info@devstudio.com" class="contacts-link">
@@ -41,7 +35,6 @@
               </a>
             </li>
           </ul>
-        <!-- </div> -->
       </div>
     </header>
 
