--- a/index.html
+++ b/index.html
@@ -315,22 +315,22 @@
 
           <ul class="socials">
             <li class="socials-item">
-              <a href="#" aria-label="Ссылка на Instagram">
+              <a href="#" aria-label="Ссылка на Instagram" class="socials-link">
                 <img src="./images/insta2.svg" alt="Инстаграмм" width="44" height="44">
               </a>
             </li>
             <li class="socials-item">
-              <a href="#" aria-label="Ссылка на Twitter">
+              <a href="#" aria-label="Ссылка на Twitter" class="socials-link">
                 <img src="./images/twitter2.svg" alt="Твиттер" width="44" height="44">
               </a>
             </li>
             <li class="socials-item">
-              <a href="#" aria-label="Ссылка на Facebook">
+              <a href="#" aria-label="Ссылка на Facebook" class="socials-link">
                 <img src="./images/facebook2.svg" alt="Фейсбук" width="44" height="44">
               </a>
             </li>
             <li class="socials-item">
-              <a href="#" aria-label="Ссылка на LinkedIn">
+              <a href="#" aria-label="Ссылка на LinkedIn" class="socials-link">
                 <img src="./images/linkedin2.svg" alt="Линкедин" width="44" height="44">
               </a>
             </li>
@@ -341,9 +341,10 @@
           <b class="subscribe-title">подписаться на рассылку</b>
           <a href="#" class="button footer-button"> Подписаться</a>
         </div>
-
+      </div>
+      
         <p class="copy">2020 | Developed by GoIT Students</p>
-      </div>  
+      
     </footer>
   </body>
 </html>
